Worked on messy API call

--- a/index.html
+++ b/index.html
@@ -82,16 +82,16 @@
     <div class="container-fluid" style="margin: 1em auto;">
       <div class="row text-center" style="padding: 1em;">
         <div class="col-6 col-lg-6">
-          <div class="panel" style="color: gray;">DEATHS <p style="color: #FB5757;" id="death">2</p><p><img src="images/death.svg" alt=""></p></div>
+          <div class="panel">DEATHS <p style="color: #FB5757;" id="death"></p><p><img src="images/death.svg" alt=""></p></div>
         </div>
         <div class="col-6 col-lg-6">
-          <div class="panel" style="color: gray;">RECOVERED <p style="color: #FB5757;" id="recover">8</p><p><img src="images/recover.svg" alt=""></p> </div>
+          <div class="panel">RECOVERED <p style="color: #FB5757;" id="recover"></p><p><img src="images/recover.svg" alt=""></p> </div>
         </div>
         <div class="col-sm-6 col-lg-6">
-          <div class="panel" style="color: gray;">ACTIVE CASES<p style="color: #FB5757;" id="active"></p></div>
+          <div class="panel">ACTIVE CASES<p style="color: #FB5757;" id="active"></p></div>
         </div>
         <div class="col-sm-6 col-lg-6">
-          <div class="panel" style="color: gray;">CLOSED CASES<p style="color: #FB5757;" id="closed">10</p></div>
+          <div class="panel">CLOSED CASES<p style="color: #FB5757;" id="closed"></p></div>
         </div>
       </div>
     </div>  
