--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     </div>
 
     <div class="container-fluid bg-light" style="margin: auto;">
-      <div class="row text-center" style="padding: 1em;">
+      <div class="row text-center" style="padding-bottom: 2em;">
         <div class="col-6 col-lg-4">
           <div class="panel" style="color: gray;">WHATSAPP<p style="color: #FB5757;" id=""></p><p><a href="https://api.whatsapp.com/send?phone=2347087110839"><img src="images/Whatsapp.svg" alt=""></a></p></div>
         </div>
@@ -144,36 +144,6 @@
         </div> -->
       </div>
     </div>  
-
-    <div class="container-fluid" id="response">
-      <div class="row" style="padding-bottom: 5em;">
-          <div class="col-md-12 text-center">
-              <h2 id="afterSlideH2">Quick Response</h2>
-              <table class="table table-striped">
-                <thead>
-                  <tr>
-                    <th scope="col">State</th>
-                    <th scope="col">Telephone No.</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row">Abia</th>
-                    <td>--</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">Adamawa</th>
-                    <td>--</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">Akwa-Ibom</th>
-                    <td>--</td>
-                  </tr>
-                </tbody>
-              </table>
-          </div>
-      </div>
-    </div>
 
     <div class="container" id="hide-wall">
         <div class="card-deck text-center" id="cardStyle">
