--- a/index.html
+++ b/index.html
@@ -98,26 +98,23 @@
     <!-- </div> -->
 
     <div class="container-fluid" id="cases">
-        <div class="row">
-            <div class="col-md-12 text-center" id="afterSlideRow">
-                <h2 id="afterSlideH2">Cases by States</h2>
-                <table class="table table-striped table-dark table-hover table-bordered" style="margin: 1em auto; width: 80%;">
+      <div class="row" style="padding-bottom: 3em;">
+          <div class="col-md-12" id="afterSlideRow">
+              <h2 id="afterSlideH2" class="text-center">Cases by States</h2>
+                <table class="table table-striped table-dark table-hover text-left pt-3" style="margin: 0px;">
                   <thead>
-                    <tr class="text-justify">
-                      <th scope="col">State</th>
-                      <th scope="col">Cases</th>
-                    </tr>
+                      <tr>
+                          <th scope="col">States</th>
+                          <th scope="col">Cases</th>
+                      </tr>
                   </thead>
-                  <tbody>
-                    <tr class="text-justify">
-                      <td scope="row" id="states"></td>
-                      <td scope="row" id="state_cases"></td>
-                    </tr>
+                  <tbody id="tableBody">
+          
                   </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
+              </table>
+          </div>
+      </div>
+  </div>
 
     <div class="container-fluid bg-light">
       <div class="row">
@@ -125,8 +122,8 @@
       </div>
     </div>
 
-    <div class="container-fluid bg-light" style="margin: auto;">
-      <div class="row text-center" style="padding-bottom: 2em;">
+    <!-- <div class="container-fluid bg-light" style="margin: auto;">
+      <div class="row text-center" style="padding-bottom: 4em;">
         <div class="col-6 col-lg-4">
           <div class="panel" style="color: gray;">WHATSAPP<p style="color: #FB5757;" id=""></p><p><a href="https://api.whatsapp.com/send?phone=2347087110839"><img src="images/Whatsapp.svg" alt=""></a></p></div>
         </div>
@@ -136,14 +133,14 @@
         <div class="col-sm-6 col-lg-4">
           <div class="panel" style="color: gray;">TWITTER<p style="color: #FB5757;" id=""></p><p><a href="https://twitter.com/NCDCgov"><img src="images/Twitter.svg" alt=""></a></p></div>
         </div>
-        <!-- <div class="col-6 col-lg-6">
+        <div class="col-6 col-lg-6">
           <div class="panel" style="color: gray;">SMS<p style="color: #FB5757;" id=""></p><p><a href="sms:+2348099555577?body=I need help, I need to be tested"><img src="images/Sms.svg" alt=""></a></p></div>
         </div>
         <div class="col-6 col-lg-6">
           <div class="panel" style="color: gray;">Call<p style="color: #FB5757;" id=""></p><p><a href="tel:+2347087110839"><img src="images/calls.svg" alt=""></a></p></div>
-        </div> -->
+        </div>
       </div>
-    </div>  
+    </div>   -->
 
     <div class="container" id="hide-wall">
         <div class="card-deck text-center" id="cardStyle">
