Nigerian Map Added, Manifest Updated

--- a/index.html
+++ b/index.html
@@ -78,7 +78,21 @@
         </footer>
       </blockquote>
     </div>
-
+    <!-- Nigeria Map Starts -->
+    <div class="container-fluid" style="margin: 1em auto;">
+      <div class="row text-center" style="padding: 1em;">
+        <div class="col-sm-6 col-lg-12">
+          <div class="embed-responsive embed-responsive-21by9" id="hide-wall">
+            <iframe class="embed-responsive-item" src="https://datawrapper.dwcdn.net/IBJXY/7/"></iframe>
+          </div>
+          <div class="embed-responsive embed-responsive-1by1" id="hide-desktop">
+            <iframe class="embed-responsive-item" src="https://datawrapper.dwcdn.net/IBJXY/7/"></iframe>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- Nigeria Map Ends -->
+    <!-- Dashboard Starts -->
     <div class="container-fluid" style="margin: 1em auto;">
       <div class="row text-center" style="padding: 1em;">
         <div class="col-6 col-lg-6">
@@ -95,10 +109,11 @@
         </div>
       </div>
     </div>  
+    <!-- Dashboard End -->
     <!-- </div> -->
-
+    <!-- State Case Table Starts -->
     <div class="container-fluid" id="cases">
-      <div class="row" style="padding-bottom: 3em;">
+      <div class="row" style="padding-bottom: 5em;">
           <div class="col-md-12" id="afterSlideRow">
               <h2 id="afterSlideH2" class="text-center">Cases by States</h2>
                 <table class="table table-striped table-dark table-hover text-left pt-3" style="margin: 0px;">
@@ -115,12 +130,13 @@
           </div>
       </div>
   </div>
+  <!-- State Case Table Ends -->
 
-    <div class="container-fluid bg-light">
+    <!-- <div class="container-fluid bg-light">
       <div class="row">
         <h2 style="text-align: center; margin: auto; padding: 0em;">Contact NCDC</h2>
       </div>
-    </div>
+    </div> -->
 
     <!-- <div class="container-fluid bg-light" style="margin: auto;">
       <div class="row text-center" style="padding-bottom: 4em;">
@@ -188,7 +204,7 @@
       </div>
     </div>
     <!-- Floating Covid-bot Button ends -->
-
+    <!-- Footer -->
     <div class="container-fluid text-center d-none d-lg-block" id="footerContainer">
         <div class="row" id="footerRow">
             <div class="col-md-12" id="footerCol">
@@ -196,6 +212,7 @@
             </div>
         </div>
     </div>
+    <!-- Footer -->
     <!--Body Container-->
 </body>
 </html>
