Smileys test added to bot

--- a/covid-bot.html
+++ b/covid-bot.html
@@ -20,7 +20,7 @@
 	                            <form action="" method="GET" class="hidden">
 
 
-	                                <select name="lang-selector" data-callback="storeState" data-conv-question="Hello! I'm a Covid-bot created to help you get through this period. Choose your default language?">
+	                                <select name="lang-selector" data-callback="storeState" data-conv-question="Hello! &#128519 I'm a Covid-bot created to help you get through this period. Choose your default language?">
 	                                    <option value="english">English</option>
 	                                    <option value="pidgin">Pidgin</option>
 	                                    <option value="hausa">Hausa</option>
@@ -38,7 +38,7 @@
 											<input data-conv-question="Type in your phone number" data-pattern="[0-9]{11}" id="phone" type="tel" name="phone" required placeholder="What's your phone number?">
 
 											<!-- (note that this question doesn't expect any answer) -->
-											<input type="text" data-conv-question="Hello, {name}:0! It's a pleasure to meet you." data-no-answer="true">
+											<input type="text" data-conv-question="Hello, {name}:0! &#128515 It's a pleasure to meet you." data-no-answer="true">
 											<!-- answer needed -->
 											<select name="inquiry" data-callback="storeState" data-conv-question="How would you want to be assisted?">
 												<option value="status">Check Covid-19 status</option>
@@ -159,7 +159,7 @@
 											<input data-conv-question="Write your phone number for here" data-pattern="[0-9]{11}" id="phone" type="tel" name="phone" required placeholder="Wetin be your phone number?">
 
 											<!-- (note that this question doesn't expect any answer) -->
-											<input type="text" data-conv-question="Weldone o, {name}:0! I happy to see you for here." data-no-answer="true">
+											<input type="text" data-conv-question="Weldone o, {name}:0! &#128515 I happy to see you for here." data-no-answer="true">
 											<!-- answer needed -->
 											<select data-callback="storeState" data-conv-question="So na wetin you want make I help you do?" name="inquiry-pidgin">
 												<option value="status-pidgin">Shey you wan check if you get Covid-19</option>
@@ -278,7 +278,7 @@
 											<input data-conv-question="Rubuta a lambar wayarka" data-pattern="[0-9]{11}" id="phone" type="tel" name="phone" required placeholder="Menene lambar wayar ku?">
 
 											<!-- (note that this question doesn't expect any answer) -->
-											<input type="text" data-conv-question="Sannu, {name}:0! Abun farin ciki ne in hadu da ku." data-no-answer="true">
+											<input type="text" data-conv-question="Sannu, {name}:0! &#128515 Abun farin ciki ne in hadu da ku." data-no-answer="true">
 											<!-- answer needed -->
 											<select data-callback="storeState" data-conv-question="Taya zaka so a taimaka maka?" name="inquiry">
 												<option value="status">Duba halin Covid-19</option>
@@ -395,7 +395,7 @@
 											<input data-conv-question="Pịnye na akara ekwentị gị" data-pattern="[0-9]{11}" id="phone" type="tel" name="phone" required placeholder="Kedu nọmba ekwentị gị?">
 
 											<!-- (note that this question doesn't expect any answer) -->
-											<input type="text" data-conv-question="Nnọọ, {name}:0! Ọ bụ ihe obi ụtọ izute gị." data-no-answer="true">
+											<input type="text" data-conv-question="Nnọọ, {name}:0! &#128515 Ọ bụ ihe obi ụtọ izute gị." data-no-answer="true">
 											<!-- answer needed -->
 											<select data-callback="storeState" data-conv-question="Kedu ka ị ga - esi chọọ ka enyere gị aka?" name="inquiry">
 												<option value="status">Lelee ọnọdụ gi gbaasara Covid-19</option>
@@ -513,7 +513,7 @@
 											<input data-conv-question="Tẹ nọmba foonu rẹ" data-pattern="[0-9]{11}" id="phone" type="tel" name="phone" required placeholder="Kini nọmba foonu rẹ?">
 
 											<!-- (note that this question doesn't expect any answer) -->
-											<input type="text" data-conv-question="Pẹlẹ o, {name}:0! O jẹ igbadun lati pade rẹ." data-no-answer="true">
+											<input type="text" data-conv-question="Pẹlẹ o, {name}:0! &#128515 O jẹ igbadun lati pade rẹ." data-no-answer="true">
 											<!-- answer needed -->
 											<select data-callback="storeState" data-conv-question="Bawo ni iwọ yoo fẹ lati ṣe iranlọwọ?" name="inquiry">
 												<option value="status">Ṣayẹwo ipo Covid-19</option>
