Added world map and little seo optimization

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Get up-to-date update about covid19 in Nigeria.">
+    <meta name="description" content="Get up-to-date update about covid19 in Lagos, Abuja, Oyo, Ogun, Osun and others">
+    <meta name="keyword" content="corona virus, covid19, covid19 confirmed cases, cases in Nigeria, covid19 updates, covid19 in Nigeria">
+
     <title>COVID-19 REPORTER</title>
     <link rel="icon" type="image/ico" href="images/sc-icon.ico">
     <link rel="manifest" href="manifest.json" />
@@ -132,6 +136,17 @@
   </div>
   <!-- State Case Table Ends -->
 
+  <!-- World Map Tracking  Starts-->
+  <div class="container-fluid" id="response">
+    <div class="row" style="padding-bottom: 5em;">
+        <div class="col-md-12 text-center">
+            <h2 id="afterSlideH2">Track Cases Around The World</h2>
+            <iframe src="https://gis.genasys.com/openlayers.html" height="550" width="100%" frameborder="2"></iframe>
+        </div>
+    </div>
+  </div>
+
+  <!-- World Map Tracking Ends -->
     <!-- <div class="container-fluid bg-light">
       <div class="row">
         <h2 style="text-align: center; margin: auto; padding: 0em;">Contact NCDC</h2>
