--- a/covid-bot.html
+++ b/covid-bot.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="dist/jquery.convform.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/covidbot.css">
+	<script src="https://smtpjs.com/v3/smtp.js"></script>
 </head>
 <body>
 	<section id="demo">
@@ -33,10 +34,12 @@
 									<div data-conv-fork="lang-selector">
 
 	                                    <div data-conv-case="english">
-											<input type="text" id="username" name="name" data-conv-question="Alright! First, tell me your full name, please.|Okay! Please, tell me your name first.">
+											<input type="text" name="name" data-conv-question="Alright! First, tell me your full name, please.|Okay! Please, tell me your name first." id="fullname">
 											<input data-conv-question="Type in your e-mail" data-pattern="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$" id="email" type="email" name="email" required placeholder="What's your e-mail?">
-											<input data-conv-question="Type in your phone number" data-pattern="[0-9]{11}" id="phone" type="tel" name="phone" required placeholder="What's your phone number?">
-
+											<input data-conv-question="Type in your phone number" data-pattern="^[0]\d{10}$" id="phone"  name="phonenumber" required placeholder="What's your phone number?">
+											<input data-conv-question="please input your gender"  id="gender" type="text" name="gender" required placeholder="What's your gender?">
+											<input data-conv-question="Type in your age" type="number" id="age"  name="age" required placeholder="What's your age?">
+											
 											<!-- (note that this question doesn't expect any answer) -->
 											<input type="text" data-conv-question="Hello, {name}:0! &#128515 It's a pleasure to meet you." data-no-answer="true">
 											<!-- answer needed -->
@@ -133,7 +136,7 @@
 
 												<select name="callbackTest" data-conv-question="Would you like to talk to a health expert now or get other info">
 													<option value="yes" data-callback="rollback">Other Info</option>
-													<option value="no" data-callback="restore">Talk to a health expert</option>
+													<option value="no" data-callback="restore" onchange="saveInfo()">Talk to a health expert</option>
 												</select>
 
 												<select data-conv-question="You can select any of our available health agent">
@@ -642,6 +645,23 @@
 	<script type="text/javascript" src="dist/autosize.min.js"></script>
 	<script type="text/javascript" src="dist/jquery.convform.js"></script>
 
+	<script src="https://www.gstatic.com/firebasejs/7.13.1/firebase-app.js"></script>
+	<script src="https://www.gstatic.com/firebasejs/7.13.1/firebase-firestore.js"></script>
+	<script>
+		const firebaseConfig = {
+		apiKey: "AIzaSyD7OCZzI6eEonwnU_tkZw_TkcfH-y3YLGA",
+		authDomain: "convid-19-f2a28.firebaseapp.com",
+		databaseURL: "https://convid-19-f2a28.firebaseio.com",
+		projectId: "convid-19-f2a28",
+		storageBucket: "convid-19-f2a28.appspot.com",
+		messagingSenderId: "186943488841",
+		appId: "1:186943488841:web:5e64be52ebb0b4552c1098",
+		measurementId: "G-7QZCCCRCK7"
+	};
+	firebase.initializeApp(firebaseConfig);
+	const db = firebase.firestore();
+	</script>
+
 	<script>
 		function matthew(stateWrapper, ready) {
 			window.open("https://api.whatsapp.com/send?phone=2348034025586&text=I'd%20like%20to%20talk%20to%20you%20about%20COVID-19%20Virus");
@@ -663,16 +683,99 @@
 			window.open("https://api.whatsapp.com/send?phone=2348034025586");
 			ready();
 		}
+
+		// sending email
+
+		function sendEmail() {
+			Email.send({
+			Host: "smtp.gmail.com",
+			Username : "okonkwomaduabuchi@gmail.com",
+			Password : "08063572194",
+			To : 'maduabuchiokonkwo@gmail.com',
+			From : "okonkwomaduabuchi@gmail.com",
+			Subject : "Covid-19",
+			Body : "How are you hope you are good",
+			}).then(
+				// message => alert("mail sent successfully")
+
+				console.log("mail sent")
+		
+			);
+		}
+
+
+		//***************
 		var rollbackTo = false;
 		var originalState = false;
 		function storeState(stateWrapper, ready) {
+			
 			rollbackTo = stateWrapper.current;
 			console.log("storeState called: ",rollbackTo);
 			ready();
 		}
 		function rollback(stateWrapper, ready) {
-			console.log("rollback called: ", rollbackTo, originalState);
-			console.log("answers at the time of user input: ", stateWrapper.answers);
+
+			var q1 = Number(stateWrapper.answers.q1.value);
+			var q2 = Number(stateWrapper.answers.q2.value);
+			var q3 = Number(stateWrapper.answers.q3.value);
+			var q4 = Number(stateWrapper.answers.q4.value);
+			var q5 = Number(stateWrapper.answers.q5.value);
+			var q6 = Number(stateWrapper.answers.q6.value);
+			var q7 = Number(stateWrapper.answers.q7.value);
+			var q8 = Number(stateWrapper.answers.q8.value);
+			var q9 = Number(stateWrapper.answers.q9.value);
+			var q10 = Number(stateWrapper.answers.q10.value);
+			var q11 = Number(stateWrapper.answers.q11.value);
+			var q12 = Number(stateWrapper.answers.q12.value);
+
+			var score = q1 + q2 + q3 + q4 + q5 + q6 + q7 + q8 + q9 + q10 + q11 + q12;
+
+			var flag = "";
+
+			if(score <= 2){
+				flag = "green";
+			}
+			else if(score <= 5){
+				flag = "blue"
+			}
+			else if(score <= 10){
+				flag = "yellow"
+			}
+			else{
+				flag = "red"
+			}
+
+			if(score > 5){
+				const redflag = {
+					name: stateWrapper.answers.name.value,
+					email: stateWrapper.answers.email.value,
+					gender: stateWrapper.answers.gender.value,
+					phone: stateWrapper.answers.phonenumber.value,
+					age: stateWrapper.answers.age.value,
+					score: score,
+					flag: flag
+
+
+				}
+
+				db.collection('redflag').add(redflag).then(()=>{
+					console.log("New redflag added")
+				}).catch(err =>{
+					console.log(err);
+				})
+
+			}
+			
+			
+			
+			// console.log("rollback called: ", rollbackTo, originalState);
+			// console.log("answers at the time of user input: ", stateWrapper.answers);
+			console.log("score is " + score);
+			db.collection('users').add(stateWrapper.answers).then(() =>{
+        			console.log("new user added")
+    		}).catch(err =>{
+            console.log(err)
+    		})
 			if(rollbackTo!=false) {
 				if(originalState==false) {
 					originalState = stateWrapper.current.next;
@@ -684,12 +787,73 @@
 			ready();
 		}
 		function restore(stateWrapper, ready) {
+			var q1 = Number(stateWrapper.answers.q1.value);
+			var q2 = Number(stateWrapper.answers.q2.value);
+			var q3 = Number(stateWrapper.answers.q3.value);
+			var q4 = Number(stateWrapper.answers.q4.value);
+			var q5 = Number(stateWrapper.answers.q5.value);
+			var q6 = Number(stateWrapper.answers.q6.value);
+			var q7 = Number(stateWrapper.answers.q7.value);
+			var q8 = Number(stateWrapper.answers.q8.value);
+			var q9 = Number(stateWrapper.answers.q9.value);
+			var q10 = Number(stateWrapper.answers.q10.value);
+			var q11 = Number(stateWrapper.answers.q11.value);
+			var q12 = Number(stateWrapper.answers.q12.value);
+
+			const now = new Date();
+			var score = q1 + q2 + q3 + q4 + q5 + q6 + q7 + q8 + q9 + q10 + q11 + q12;
+
+			var flag = "";
+
+			if(score <= 2){
+				flag = "green";
+			}
+			else if(score <= 5){
+				flag = "blue"
+			}
+			else if(score <= 10){
+				flag = "yellow"
+			}
+			else{
+				flag = "red"
+			}
+
+			if(score > 5){
+				const redflag = {
+					name: stateWrapper.answers.name.value,
+					email: stateWrapper.answers.email.value,
+					gender: stateWrapper.answers.gender.value,
+					phone: stateWrapper.answers.phonenumber.value,
+					age: stateWrapper.answers.age.value,
+					score: score,
+					flag: flag,
+					created_at: firebase.firestore.Timestamp.fromDate(now)
+
+
+				}
+
+				db.collection('redflag').add(redflag).then(()=>{
+					console.log("New redflag added")
+				}).catch(err =>{
+					console.log(err);
+				})
+
+			}
+			
+			db.collection('users').add(stateWrapper.answers).then(() =>{
+        			console.log("new user added")
+    		}).catch(err =>{
+            console.log(err)
+    		})
 			if(originalState != false) {
+				
 				stateWrapper.current.next = originalState;
 				console.log('changed current.next to originalState');
 			}
 			ready();
 		}
+
+		
 	</script>
 	<script>
 		jQuery(function($){
@@ -698,6 +862,15 @@
 		});
 	</script>
 	<script src="covidjs/botstatus.js"></script>
+	<script src="covidjs/sandbox.js"></script>
+	<script src="https://smtpjs.com/v3/smtp.js"></script>
+    <!-- <script src="/__/firebase/7.13.1/firebase-auth.js"></script>
+    <script src="/__/firebase/7.13.1/firebase-firestore.js"></script>
+    <script src="/__/firebase/7.13.1/firebase-functions.js"></script>
+     -->
+
+    <!-- Initialize Firebase -->
+    <!-- <script src="/__/firebase/init.js"></script> -->
 </body>
 <!-- <script src="covidjs/botstatus.js"></script> -->
 </html>
