Indications for phone input

--- a/covid-bot.html
+++ b/covid-bot.html
@@ -35,8 +35,8 @@
 
 	                                    <div data-conv-case="english">
 											<input type="text" name="name" data-conv-question="Alright! First, tell me your full name, please.|Okay! Please, tell me your name first." id="fullname">
-											<input data-conv-question="Type in your e-mail" data-pattern="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$" id="email" type="email" name="email" required placeholder="What's your e-mail?">
-											<input data-conv-question="Type in your phone number" data-pattern="^[0]\d{10}$" id="phone"  name="phonenumber" required placeholder="What's your phone number?">
+											<input data-conv-question="Type in your e-mail (mohammed@gmail.com)" data-pattern="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$" id="email" type="email" name="email" required placeholder="What's your e-mail?">
+											<input data-conv-question="Type in your phone number (08065767567)" data-pattern="^[0]\d{10}$" id="phone" type="tel"  name="phonenumber" required placeholder="What's your phone number?">
 											<select name="gender" id="gender" data-conv-question="Please select your gender" >
 												<option value="male">Male</option>
 												<option value="female">Female</option>
@@ -198,7 +198,7 @@
 														<option value="1">Yes o</option>
 														<option value="0">No o</option>
 													</select>	                                    
-													<select name="q4" class="stat" data-conv-question="Shey sore throat dey worry?">
+													<select name="q4" class="stat" data-conv-question="Shey sore throat dey worry you?">
 														<option value="1">Yes o</option>
 														<option value="0">No o</option>
 													</select>	                                    
@@ -218,7 +218,7 @@
 														<option value="2">Yes o</option>
 														<option value="0">No o</option>
 													</select>
-													<select name="q9" class="stat" data-conv-question="Shey you too dey feel tire tire?">
+													<select name="q9" class="stat" data-conv-question="Shey you too dey tire?">
 														<option value="2">Yes o</option>
 														<option value="0">No o</option>
 													</select>
