Home hav icon for Diagnosis page fixed

--- a/diagnosis.html
+++ b/diagnosis.html
@@ -49,7 +49,7 @@
     </div>
     <div class="container-fluid" id="aligner">
     <nav class="navbar navbar-light bg-light fixed-bottom nav-bottom-shadow" id="hide-desktop">
-      <a class="navbar-brand" style="padding-left: 1em;"  href="#"><img src="images/home.svg" onmouseover="this.src='images/home-hover.svg'" onmouseout="this.src='images/home.svg'" alt="logo"></a>
+      <a class="navbar-brand" style="padding-left: 1em;"  href="/index.html"><img src="images/home.svg" onmouseover="this.src='images/home-hover.svg'" onmouseout="this.src='images/home.svg'" alt="logo"></a>
       <a class="navbar-brand"  href="/prevention.html"><img src="images/prevention.svg"  onmouseover="this.src='images/prev-hover.svg'" onmouseout="this.src='images/prevention.svg'" alt="logo"></a>
       <a class="navbar-brand"  href="/symptoms.html"><img src="images/symptoms.svg" alt="logo"></a>
       <a class="navbar-brand"  href="#"><img src="images/diagnosis.svg" onmouseover="this.src='images/diag-hover.svg'" onmouseout="this.src='images/diagnosis.svg'" alt="logo"></a>
