Logo linked to homepage, text decoration removed for href

--- a/symptoms.html
+++ b/symptoms.html
@@ -21,7 +21,7 @@
 <body>
     <!--Body Container-->
     <div class="container-fluid text-center sticky-top nav-shadow" id="lago">
-      <a href="#"><h3>COVID-19 REPORTER</h3></a>
+      <a href="/index.html"><h3>COVID-19 REPORTER</h3></a>
     </div>
     <div class="container-fluid d-none d-lg-block" id="nav-shadow" style="padding: 0em;">
       <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top nav-shadow" id="navDesktop">
