--- a/covid-bot.html
+++ b/covid-bot.html
@@ -406,14 +406,14 @@
 											
 
 										<div data-conv-case="igbo">
-											<input type="text" id="username" name="name" data-conv-question="Daalu! Buru ụzọ gwa m aha gị nke ọma, biko.|Ọ dị mma! Biko, buru ụzọ gwa m aha gị.">
-											<input data-conv-question="Pịnye n’ime e-mail gị" data-pattern="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$" id="email" type="email" name="email" required placeholder="Kedu ihe bụ email gị?">
-											<input data-conv-question="Pịnye na akara ekwentị gị" data-pattern="^[0]\d{10}$" id="phone" type="tel" name="phonenumber" required placeholder="Kedu nọmba ekwentị gị?">
-											<select name="gender" id="gender" data-conv-question="Biko ibu nwoke ke i bu nwanyi" >
+											<input type="text" id="username" name="name" data-conv-question="Daalu! Buru ụzọ gwa m aha gị, biko.|Ọ dị mma! Biko, buru ụzọ gwa m aha gị.">
+											<input data-conv-question="Pịnye e-mail gị" data-pattern="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+\.[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$" id="email" type="email" name="email" required placeholder="Kedu ihe bụ email gị?">
+											<input data-conv-question="Pịnye akara ekwentị gị" data-pattern="^[0]\d{10}$" id="phone" type="tel" name="phonenumber" required placeholder="Kedu nọmba ekwentị gị?">
+											<select name="gender" id="gender" data-conv-question="Biko i bu nwoke ka i bu nwanyi" >
 												<option value="male">Nwoke</option>
 												<option value="female">Nwanyi</option>
 											</select>
-											<input data-conv-question="Pịnye n'afọ ndụ gị" type="number" id="age"  name="age" required placeholder="Kedu afọ gị?">
+											<input data-conv-question="Pịnye afọ ole ị di" type="number" id="age"  name="age" required placeholder="Kedu afọ gị?">
 
 											<!-- (note that this question doesn't expect any answer) -->
 											<input type="text" data-conv-question="Nnọọ, {name}:0! &#128515 Ọ bụ ihe obi ụtọ izute gị." data-no-answer="true">
@@ -438,7 +438,7 @@
 														<option value="1">Ee</option>
 														<option value="0">Mba</option>
 													</select>	                                    
-													<select name="q3" class="stat" data-conv-question="ịrịa ga Diarrhea?">
+													<select name="q3" class="stat" data-conv-question="ị n'arịa (onyunyu) Diarrhea?">
 														<option value="1">Ee</option>
 														<option value="0">Mba</option>
 													</select>	                                    
@@ -454,7 +454,7 @@
 														<option value="1">Ee</option>
 														<option value="0">Mba</option>
 													</select>	                                    
-													<select name="q7" class="stat" data-conv-question="ị nwere ahụ ọkụ (Okpomoku Celsius 37.8 ogo elu na elu)?">
+													<select name="q7" class="stat" data-conv-question="ị nwere ahụ ọkụ (Okpomoku akara Celsius 37.8 ma o bu karia)?">
 														<option value="1">Ee</option>
 														<option value="0">Mba</option>
 													</select>
@@ -470,17 +470,17 @@
 														<option value="3">Ee</option>
 														<option value="0">Mba</option>
 													</select>
-													<select name="q11" class="stat" data-conv-question="History nwere akụkọ njem na mpaghara ọrịa COVID-19?">
+													<select name="q11" class="stat" data-conv-question="I meela njem na mpaghara ọrịa COVID-19?">
 														<option value="3">Ee</option>
 														<option value="0">Mba</option>
 													</select>
-													<select name="q12" class="stat" id="submitButton" onchange="submitQuiz()" data-conv-question="ị nwere kọntaktị ozugbo ma ọ bụ na-elekọta onye ọrịa COVID-19 dị mma?">
+													<select name="q12" class="stat" id="submitButton" onchange="submitQuiz()" data-conv-question="ị nwere mmekọrịta ị ma ọ bụ i n'elekọta onye nwere ọrịa COVID-19?">
 														<option value="3" data-callback="rest">Ee</option>
 														<option value="0" data-callback="rest">Mba</option>
 
-													<input type="text" data-conv-question="Ọ bụrụ na akara ule gị dị n'okpuru 3, may nwere ike imesi ike, mana naanị na-elele!" data-no-answer="true">
-													<input type="text" data-conv-question="Ọ bụrụ na akara ule gị dị n'agbata 3-5, Hidekwa nke ọma ma debe ịdị ọcha onwe gị. Leruo ma tugharia mgbe ubochi abuo!" data-no-answer="true">
-													<input type="text" data-conv-question="Ọ bụrụ na akara ule gị dị karịa afọ ise, chọọ onye dọkịta!" data-no-answer="true">
+													<input type="text" data-conv-question="Ọ bụrụ n'kara ule gị dị n'agbata akara efu rue akara ato, o gosiri n'ahu gi choro ezumike, n'atulee onwe gi!" data-no-answer="true">
+													<input type="text" data-conv-question="Ọ bụrụ n'kara ule gị dị n'agbata akara ato n'akara ise, N'anu mmiri nke oma.ma n'edebe onwe gi ocha nkeoma. Tulee onwe gi ma izu abuo ga-chaa!" data-no-answer="true">
+													<input type="text" data-conv-question="Ọ bụrụ n'kara ule gị dị karịri akara ise, chọwa onye okachamara ahuike!" data-no-answer="true">
 													
 												</div>
 												<div data-conv-case="prevention">
