--- a/diagnosis.html
+++ b/diagnosis.html
@@ -192,7 +192,7 @@
               </div>
              
               <div style="margin: 1em auto;">
-              <input class="btn btn-danger btn-lg" style="margin: 2em;" id="submitButton" data-toggle="modal" data-target="#staticBackdrop" onClick="submitQuiz()"
+              <input class="btn btn-danger btn-lg" style="margin: 2em;" id="diagnosisButton" data-toggle="modal" data-target="#staticBackdrop" onClick="diagnosis()"
               type="submit" value="Check Status" />
               </div> <p></p>
 
@@ -205,7 +205,7 @@
                       <span aria-hidden="true">&times;</span>
                     </button>
                   </div>
-                  <div class="modal-body" id="userScore"></div>
+                  <div class="modal-body" id="patientScore"></div>
                   <div class="modal-footer">
                     <input class="btn btn-danger" data-dismiss="modal" type="reset" value="Understood" />
                   </div>
