Google Analytics Added

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
     <link rel="apple-touch-icon" href="/images/sc-icon.png" />
     <meta name="apple-mobile-web-app-status-bar" content="#e66465" />
     <meta name="theme-color" content="#e66465" />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-151799830-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-151799830-1');
+</script>
     <script charset="UTF-8" src="//web.webpushs.com/js/push/422c94e8ff407466065446d79cd0c67c_1.js" async></script>
     <link rel="stylesheet" href="css/main.css" type="text/css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
